--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "depinj-js",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "A simple Dependency Injection library written in TypeScript compatible with vanilla JavaScript recommended for NodeJS.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/sj-freitas/depinj/issues"
   },
-  "homepage": "https://github.com/sj-freitas/depinj#readme",
+  "homepage": "https://github.com/sj-freitas/depinj/tree/1.3.0#readme",
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
