--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "depinj-js",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "A simple Dependency Injection library written in TypeScript compatible with vanilla JavaScript recommended for NodeJS.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -13,12 +13,13 @@
   "repository": {
     "type": "git"
   },
-  "author": "",
+  "author": "https://github.com/sj-freitas",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sj-freitas/depinj/issues"
   },
-  "homepage": "https://github.com/sj-freitas/depinj/tree/1.5.1#readme",
+  "keywords": ["dependency-injection", "di", "ioc"],
+  "homepage": "https://github.com/sj-freitas/depinj/tree/1.5.2#readme",
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
