--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "depinj-js",
-  "version": "1.5.4",
+  "version": "1.5.5",
   "description": "A simple Dependency Injection library written in TypeScript compatible with vanilla JavaScript recommended for NodeJS.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -11,7 +11,8 @@
     "typecheck": "tsc --noEmit"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/sj-freitas/depinj"
   },
   "author": "https://github.com/sj-freitas",
   "license": "MIT",
@@ -19,7 +20,7 @@
     "url": "https://github.com/sj-freitas/depinj/issues"
   },
   "keywords": ["dependency-injection", "di", "ioc"],
-  "homepage": "https://github.com/sj-freitas/depinj/tree/1.5.4#readme",
+  "homepage": "https://github.com/sj-freitas/depinj/tree/1.5.5#readme",
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
